# autoGolfCar

backend/: index.js  package-lock.json  package.json
backend/models/: Car.js
backend/routes/: carRoutes.js  navRoutes.js
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  Mapview.jsx
frontend/src/components/dashBoardComponent/: Dashboard.jsx
navigation/: salesman_algorithm.py  salesman_service.py
simulation/: .gitignore  CMakeLists.txt  data_processing  data_processing.cpp
